# nhk2022_ilias

./: .travis.yml  Dependencies.md  README.md  install.sh
accesory_commander/: CMakeLists.txt  package.xml
accesory_commander/src/: accesory_commander_R2.cpp
auto_aim/: CMakeLists.txt  package.xml
auto_aim/launch/: BoH.launch
auto_aim/src/: BoH_indicator.h  BoH_indicator.py  auto_aimer.cpp  auto_aimer.h  main.cpp
bezier_path_planning_pursuit/: README.md
bezier_path_planning_pursuit/launch/: bezier_path_planning_pursuit.launch
bezier_path_planning_pursuit/src/: main.cpp  path_planner.cpp  path_planner.h
joy_commander/include/joy_commander/: joy_commander.h
joy_commander/src/: joy_commander.cpp
nhk2022_launcher/: CMakeLists.txt  README.md  nhk2022_launcher.rosinstall  package.xml
nhk2022_launcher/scripts/: accessories_controler.py  accessories_controler_R2.py  accessories_joy_controler_R1.py  accessories_joy_controler_R2.py  hardware_init_R1.py  hardware_init_R2.py  task_selector.py  task_selector_R1.py  task_selector_R2.py
nhk2022_launcher/urdf/: R1.urdf  R2.urdf
nhk2022_simulator/: CMakeLists.txt  README.md  package.xml
nhk2022_simulator/launch/: 4wd_mecanum_simulation_DR.launch  4wd_mecanum_simulation_TR.launch  diff_drive_simulation.launch  gmapping.launch  simulation_R2.launch  swerve_simulation_DR.launch  swerve_simulation_R1.launch  swerve_simulation_TR.launch
nhk2022_simulator/urdf/: _d435.urdf.xacro  diff_robot.urdf.xacro  lidar.urdf.xacro  mecanum_robot.urdf.xacro  omni_body.urdf.xacro  omni_robot.urdf.xacro  simple_odom_robot.urdf  simple_odom_robot.urdf.xacro  swerve_robot.urdf.xacro
nhk2022_simulator/worlds/: osada_field.world
nhk2022_webgui/: .eslintrc.js  .gitignore  .prettierrc  CMakeLists.txt  README.md  index.html  nhk2022_webgui.rosinstall  package-lock.json  package.json  package.xml  rvizwebConfig.json  tsconfig.json  vite.config.ts  vue.config.js
nhk2022_webgui/launch/: server.launch
nhk2022_webgui/public/: index.html
nhk2022_webgui/src/: App.vue  main.ts  quasar-user-options.ts  router.ts
nhk2022_webgui/src/components/: Arm.vue  AutoPath.vue  Card.vue  CmdVel.vue  Joy.vue  Odom.vue  Test.vue
nhk2022_webgui/src/css/: quasar.variables.scss
nhk2022_webgui/src/pages/: DebugR2.vue  Home.vue  LagoriSet.vue  R2Auto.vue  R2Pile.vue
nhk2022_webgui/src/script/: rosHook.ts
nhk2022_webgui/src/types/: ActionTyped.ts  cmdVel.ts  joy.ts  msgTypes.ts  odom.ts  pursuitPath.ts  quaternion-to-euler.d.ts
nhk2022_webgui/www/: WebGUI.html  index.html  style.css
nhk2022_webgui/www/css/: app.1600e518.css
nhk2022_webgui/www/js/: app.8e4667ba.js  app.8e4667ba.js.map  chunk-vendors.b3e3bb8b.js  chunk-vendors.b3e3bb8b.js.map
rogilink_converter/: CMakeLists.txt  package.xml
rogilink_converter/src/: main.cpp  rogilink_converter.cpp  rogilink_converter.h
throw_ball_commander/: CMakeLists.txt  package.xml
throw_ball_commander/include/: throw_ball_commander.h
throw_ball_commander/src/: main.cpp  throw_ball_commander.cpp  throw_ball_commander.h
(+38 files in other folders)
